Bug 1247824 - Don't set the popup's size unless the width/height attributes exist. r=masayuki